# web_scraping_with_python

sdl_toolbox/: Cargo.toml
sdl_toolbox/chicken_run/: Cargo.toml
sdl_toolbox/chicken_run/src/: main.rs
sdl_toolbox/gfx_draw_circle/: Cargo.toml
sdl_toolbox/gfx_draw_circle/src/: main.rs
sdl_toolbox/init_vec_of_struct/: Cargo.toml
sdl_toolbox/init_vec_of_struct/src/: main.rs
sdl_toolbox/lesson02/: Cargo.toml
sdl_toolbox/lesson02/src/: main.rs
sdl_toolbox/sdl_01_ttf/: Cargo.toml
sdl_toolbox/sdl_01_ttf/src/: main.rs
sdl_toolbox/sdl_surface/: Cargo.toml
sdl_toolbox/sdl_surface/src/: main.rs
sdl_tutorial_lazy_foo/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_02_get_an_image_on_the_screen/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_02_get_an_image_on_the_screen/src/: main.rs
sdl_tutorial_lazy_foo/sdl_03_event_driving_programming/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_03_event_driving_programming/src/: main.rs
sdl_tutorial_lazy_foo/sdl_04_key_presses/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_04_key_presses/src/: main.rs
sdl_tutorial_lazy_foo/sdl_08_geometry_rendering/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_08_geometry_rendering/src/: main.rs
sdl_tutorial_lazy_foo/sdl_09_viewport/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_10_color_keying/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_13_alpha_blending/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_23_advanced_timers/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_24_calculating_frame_rate/: Cargo.toml
sdl_tutorial_lazy_foo/sdl_24_calculating_frame_rate/src/: main.rs
snake/snake-1/: Cargo.toml
snake/snake-2/: Cargo.toml
(+8 files in other folders)
