[package]
name = "init_vec_of_struct"
version = "0.1.0"
authors = ["bruno <bru65pag@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.34.0"
default-features = false
features = ["image"]
